# social/cmd/api/users.go
@@ -18,6 +18,40 @@ type FollowUser struct {
 	UserID int64 `json:"user_id"`
 }
 
+// ActivateUser godoc
+//
+//	@Summary	Activate user account
+//	@Tags		users
+//	@Accept		json
+//	@Produce	json
+//	@Param		token	path		string	true	"User activation token"
+//	@Success	204		{object}	nil
+//	@Failure	404		{object}	error
+//	@Failure	500		{object}	error
+//	@Router		/v1/users/activate/{token} [put]
+func (app *application) activateUserHandler(w http.ResponseWriter, r *http.Request) {
+	token := chi.URLParam(r, "token")
+
+	ctx := r.Context()
+
+	err := app.store.Users.Activate(ctx, token)
+	if err != nil {
+		switch err {
+		case store.ErrNotFound:
+			app.notFound(w, r, err)
+			return
+		default:
+			app.internalServerError(w, r, err)
+			return
+		}
+	}
+
+	if err := app.jsonResponse(w, http.StatusNoContent, nil); err != nil {
+		app.internalServerError(w, r, err)
+		return
+	}
+}
+
 // GetUser godoc
 //
 //	@Summary	Get user by ID
@@ -75,6 +109,16 @@ func (app *application) followUserHandler(w http.ResponseWriter, r *http.Request
 	}
 }
 
+// UnfollowUser godoc
+//
+//	@Summary	Unfollow a user
+//	@Tags		users
+//	@Accept		json
+//	@Produce	json
+//	@Param		userID	path		int	true	"User ID"
+//	@Success	200		{object}	store.User
+//	@Failure	404		{object}	error
+//	@Router		/v1/users/{userID}/unfollow [put]
 func (app *application) unfollowUserHandler(w http.ResponseWriter, r *http.Request) {
 	unfollowUser := getUserFromContext(r)
 
