# social/docs/swagger.yaml
@@ -1,5 +1,29 @@
 basePath: /v1
 definitions:
+  main.RegisterUserPayload:
+    properties:
+      email:
+        type: string
+      password:
+        maxLength: 255
+        minLength: 6
+        type: string
+      username:
+        maxLength: 255
+        minLength: 3
+        type: string
+    required:
+    - email
+    - password
+    - username
+    type: object
+  main.UserWithToken:
+    properties:
+      token:
+        type: string
+      user:
+        $ref: '#/definitions/store.User'
+    type: object
   store.User:
     properties:
       created_at:
@@ -8,6 +32,8 @@ definitions:
         type: string
       id:
         type: integer
+      is_activated:
+        type: boolean
       username:
         type: string
     type: object
@@ -23,6 +49,30 @@ info:
   termsOfService: http://swagger.io/terms/
   title: Social Media API
 paths:
+  /v1/authentication/register:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: User payload
+        in: body
+        name: payload
+        required: true
+        schema:
+          $ref: '#/definitions/main.RegisterUserPayload'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/main.UserWithToken'
+        "400":
+          description: Bad Request
+          schema: {}
+      summary: Register a new user
+      tags:
+      - authentication
   /v1/users/{userID}:
     get:
       consumes:
@@ -67,6 +117,53 @@ paths:
           description: Not Found
           schema: {}
       summary: Follow a user
+      tags:
+      - users
+  /v1/users/{userID}/unfollow:
+    put:
+      consumes:
+      - application/json
+      parameters:
+      - description: User ID
+        in: path
+        name: userID
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/store.User'
+        "404":
+          description: Not Found
+          schema: {}
+      summary: Unfollow a user
+      tags:
+      - users
+  /v1/users/activate/{token}:
+    put:
+      consumes:
+      - application/json
+      parameters:
+      - description: User activation token
+        in: path
+        name: token
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "204":
+          description: No Content
+        "404":
+          description: Not Found
+          schema: {}
+        "500":
+          description: Internal Server Error
+          schema: {}
+      summary: Activate user account
       tags:
       - users
 securityDefinitions:
